--- a/config.json
+++ b/config.json
@@ -10,7 +10,7 @@
         "host": "192.168.2.24",
         "enabled": true,
         "port": 5775,
-        "service": "alert-digester"
+        "service": "alert-service"
     },
     "logging": {
         "version": 1,
