--- a/config.json
+++ b/config.json
@@ -3,14 +3,15 @@
         "host": "192.168.2.24",
         "port": 8086,
         "username": "root",
-        "password": "root",
+        "password": "root"        
+    },
+    "alert_digester": {
         "database": "fog_alerts"
     },
     "tracer": {
         "host": "192.168.2.24",
         "enabled": true,
-        "port": 5775,
-        "service": "alert-service"
+        "port": 5775
     },
     "logging": {
         "version": 1,
