--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,6 @@ image: docker:stable
 
 services:
   - docker:dind
-  - eclipse-mosquitto
 
 variables:
   CONTAINER_IMAGE: registry.gitlab.com/$CI_PROJECT_PATH
@@ -22,9 +21,13 @@ build:
   script:
     - docker pull $CONTAINER_IMAGE:latest || true
     - docker build --cache-from $CONTAINER_IMAGE:latest --tag $CONTAINER_IMAGE:$CI_COMMIT_TAG --tag $CONTAINER_IMAGE:$CI_BUILD_REF --tag $CONTAINER_IMAGE:latest .
+    - docker build --cache-from $CONTAINER_IMAGE/api:latest --tag $CONTAINER_IMAGE/api:$CI_COMMIT_TAG --tag $CONTAINER_IMAGE/api:$CI_BUILD_REF --tag $CONTAINER_IMAGE/api:latest -f ./Dockerfile.api .
     - docker push $CONTAINER_IMAGE:$CI_COMMIT_TAG
     - docker push $CONTAINER_IMAGE:$CI_BUILD_REF
     - docker push $CONTAINER_IMAGE:latest
+    - docker push $CONTAINER_IMAGE/api:$CI_COMMIT_TAG
+    - docker push $CONTAINER_IMAGE/api:$CI_BUILD_REF
+    - docker push $CONTAINER_IMAGE/api:latest
 
 publish:
   image: docker:stable
@@ -39,6 +42,10 @@ publish:
     - docker login -u $DOCKER_PUBLIC_USERNAME -p $DOCKER_PUBLIC_KEY
     - docker pull $CONTAINER_PUBLIC_IMAGE:latest || true
     - docker build --cache-from $CONTAINER_PUBLIC_IMAGE:latest --tag $CONTAINER_PUBLIC_IMAGE:$CI_COMMIT_TAG --tag $CONTAINER_PUBLIC_IMAGE:$CI_BUILD_REF --tag $CONTAINER_PUBLIC_IMAGE:latest .
+    - docker build --cache-from $CONTAINER_PUBLIC_IMAGE-api:latest --tag $CONTAINER_PUBLIC_IMAGE-api:$CI_COMMIT_TAG --tag $CONTAINER_PUBLIC_IMAGE-api:$CI_BUILD_REF --tag $CONTAINER_PUBLIC_IMAGE-api:latest -f ./Dockerfile.api .
     - docker push $CONTAINER_PUBLIC_IMAGE:$CI_COMMIT_TAG
     - docker push $CONTAINER_PUBLIC_IMAGE:$CI_BUILD_REF
     - docker push $CONTAINER_PUBLIC_IMAGE:latest
+    - docker push $CONTAINER_PUBLIC_IMAGE-api:$CI_COMMIT_TAG
+    - docker push $CONTAINER_PUBLIC_IMAGE-api:$CI_BUILD_REF
+    - docker push $CONTAINER_PUBLIC_IMAGE-api:latest
